| Bug #42977 | RBR logs for rows with more than 250 column results in corrupt binlog. | ||
|---|---|---|---|
| Submitted: | 18 Feb 17:29 | Modified: | 15 Apr 12:24 |
| Reporter: | Matthew Montgomery | ||
| Status: | Closed | ||
| Category: | Server: RBR | Severity: | S1 (Critical) |
| Version: | 6.0.8, 5.1.32 | OS: | Any |
| Assigned to: | Andrei Elkin | Target Version: | 5.1.34 |
| Triage: | Triaged: D2 (Serious) | ||
[18 Feb 17:29]
Matthew Montgomery
[18 Feb 18:12]
Matthew Montgomery
Sorry, BINLOG_FORMAT=MIXED does not reproduce this bug. Only ROW
[23 Mar 17:31]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70089 2844 Andrei Elkin 2009-03-23 Bug#42977 RBR logs for rows with more than 250 column results in corrupt binlog The issue happened to be two-fold. The table map event was recorded into binlog having an incorrect size when number of columns exceeded 251. The Row-based event had incorrect recording and restoring m_width member within the same as above conditions. Fixed with correcting m_data_size and m_width.
[24 Mar 11:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70162 2844 Andrei Elkin 2009-03-24 Bug#42977 RBR logs for rows with more than 250 column results in corrupt binlog The issue happened to be two-fold. The table map event was recorded into binlog having an incorrect size when number of columns exceeded 251. The Row-based event had incorrect recording and restoring m_width member within the same as above conditions. Fixed with correcting m_data_size and m_width.
[24 Mar 14:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70208 2845 Andrei Elkin 2009-03-24 Bug #42977 RBR logs for rows with more than 250 column results in corrupt binlog. correcting the position of the null-terminator in DBUG_PRINT_BITSET()
[24 Mar 15:31]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70218 2844 Andrei Elkin 2009-03-24 Bug#42977 RBR logs for rows with more than 250 column results in corrupt binlog The issue happened to be two-fold. The table map event was recorded into binlog having an incorrect size when number of columns exceeded 251. The Row-based event had incorrect recording and restoring m_width member within the same as above conditions. Fixed with correcting m_data_size and m_width.
[25 Mar 11:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70337 2841 Andrei Elkin 2009-03-25 Bug#42977 RBR logs for rows with more than 250 column results in corrupt binlog The issue happened to be two-fold. The table map event was recorded into binlog having an incorrect size when number of columns exceeded 251. The Row-based event had incorrect recording and restoring m_width member within the same as above conditions. Fixed with correcting m_data_size and m_width.
[25 Mar 12:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70342 3168 Andrei Elkin 2009-03-25 [merge] merging bug#42977 from 5.1-pe-stage to 6.0-pe-stage
[25 Mar 12:47]
Andrei Elkin
Pushed to 5.1,6.0 -pe-stage.
[26 Mar 10:26]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70492 2842 Andrei Elkin 2009-03-26 bug#42977 compilation warning fixed
[26 Mar 10:31]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70495 3171 Andrei Elkin 2009-03-26 [merge] merge from 5.1-pe-stage to 6.0 for bug#42977 compilation warning issue
[27 Mar 15:58]
Bugs System
Pushed into 5.1.34 (revid:joro@sun.com-20090327143448-wuuuycetc562ty6o) (version source revid:aelkin@mysql.com-20090326092543-renqntx4o2utp5yx) (merge vers: 5.1.34) (pib:6)
[30 Mar 13:54]
Jon Stephens
Documented bugfiuc in the 5.1.34 changelog as follows:
Binary logging with --binlog_format=ROW failed when a change to
be logged included more than 251 columns. This issue was not
known to occur with mixed-format or statement-based logging.
Set NDI status pending merge to 6.0 tree.
[13 Apr 11:22]
Bugs System
Pushed into 6.0.11-alpha (revid:alik@sun.com-20090413084402-snnrocwzktcl88ny) (version source revid:aelkin@mysql.com-20090326093021-po37vuupbh22j49l) (merge vers: 6.0.11-alpha) (pib:6)
[15 Apr 12:24]
Jon Stephens
Fix now also documented in the 6.0.11 changelog; closed.
[9 May 18:41]
Bugs System
Pushed into 5.1.34-ndb-6.2.18 (revid:jonas@mysql.com-20090508185236-p9b3as7qyauybefl) (version source revid:jonas@mysql.com-20090508185236-p9b3as7qyauybefl) (merge vers: 5.1.34-ndb-6.2.18) (pib:6)
[9 May 19:38]
Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:jonas@mysql.com-20090509063138-1u3q3v09wnn2txyt) (version source revid:jonas@mysql.com-20090509063138-1u3q3v09wnn2txyt) (merge vers: 5.1.34-ndb-6.3.25) (pib:6)
[9 May 20:35]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:jonas@mysql.com-20090509154927-im9a7g846c6u1hzc) (version source revid:jonas@mysql.com-20090509154927-im9a7g846c6u1hzc) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
